⬆️ Update mod to Minecraft 26.1.2